# risc0

./: .bazelignore  .bazelrc  .bazelrc.windows  .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .licenserc.json  .pre-commit-config.yaml  .pre-commit-config.yml  .remarkrc  .watchmanconfig  2  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.lock~9422d53 (Add missing ticks in function definitions)  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  LICENSE-header  MODULE.bazel  README.CMake.md  README.md  SECURITY.md  WORKSPACE  _typos.toml  amplify.sh  biome.jsonc  buildspec.yml  busybox  cargo-bazel-lock-guest.json  cargo-bazel-lock-host.json  cargo-build.sh  clang-format.py  (+17 more)
benchmarks/: .gitignore  Cargo.toml  README.md  build.rs
benchmarks/cycle_count/: Cargo.toml
benchmarks/cycle_count/src/: lib.rs  main.rs
benchmarks/methods/: Cargo.toml  build.rs
benchmarks/methods/guest/: Cargo.toml
benchmarks/shared/: Cargo.toml
benchmarks/shared/src/: lib.rs
benchmarks/src/: lib.rs  main.rs
benchmarks/src/benches/: big_blake2b.rs  big_blake3.rs  big_keccak.rs  big_sha2.rs  ecdsa_verify.rs  ed25519_verify.rs  fibonacci.rs  iter_blake2b.rs  iter_blake3.rs  iter_keccak.rs  iter_pedersen.rs  iter_sha2.rs  membership.rs  merkle_tree.rs  mod.rs  (+2 more)
bento/: Cargo.toml  README.md  compose.yml
bento/.sqlx/: query-09bf971c1479e2e1210e8fc406f0a6b83c3a89757306068a8b39eb3e669bb9e0.json  query-2bbd0c900dd78c6bbfd9fd26169d514fa9836ccac402906287b8e8065401b4b6.json  query-4c18a58f2978cf38cb21861e588d6baff1e17c78408ada56ba40355232d034fe.json  query-62f1078237433da96ae4e0357756d6ff6d2e05af98248fae251e238a4dfed040.json  query-676560153f5314b20b8249029c80a4b427ea0763d22556e99a96589abef72922.json  query-6bd30587f76885d761a33dd40230f799904e4d790546854087116317f725f0d8.json  query-7c9ffb3cea5e4d88731a2ce2002aa9fe7c4cf0fe70290acf5d5a457012329e5b.json  query-98be52d31f130729d200e46dca8fb8bba9eed011f6bb6b2c18b8f3b8a3112acb.json  query-ad0b9dd321787be38b84b7be95c003e48a53b62043627987dcddf35fbe08dc6c.json  query-cb132bd2a36febc699e69c97c7f2a673e7a58cd4764e5f27bea094dcae6068a9.json  query-e1f13dbd0322f3cbc6cb5226c45974f8a57e7e5e06e12a799679c2a8ee4c968e.json  query-ef499e1ce903a51b633d7fe62f1fb00a8219d5ab4e9da02144d949ffefe6cef6.json  query-f7ae8c9ab7f7bf604f4877640959147b53fe47a2d2e90ca14bc4579012e8f01f.json
bento/dockerfiles/: agent.dockerfile  rest_api.dockerfile  sample.env  sccache-config.sh  sccache-setup.sh
bonsai/: Cargo.toml
bonsai/alpha-sdk/: Cargo.toml  README.md
bonsai/ethereum/: .env  .gitignore  Cargo.toml  build.rs  foundry.toml  remappings.txt
bonsai/ethereum-relay/: .gitignore  Cargo.toml  README.md  build.rs  foundry.toml
bonsai/groth16/: Cargo.toml  README.md
bonsai/guest-sdk/: Cargo.toml
bonsai/rest-api-mock/: Cargo.toml  README.md
bonsai/sdk/: Cargo.toml  README.md
bonsai/sdk-async/: Cargo.toml  README.md
compact_proof/seal_to_json/: Cargo.toml
docs/: BUILD.bazel  Doxyfile  README.md  battleship_rust_tutorial.md  build-doc.sh  docs.py  merkle-branch-optimization.md  metal-optimization-progress.md  migrate-to-0.12-faq.md  migrate-to-0.15-guide.md  readme.md
docs/mdbook/: book.toml
examples/: .gitignore  Cargo.toml  README.md
examples/asm-guest/: Makefile  README.md
examples/bevy/: Cargo.toml  README.md
examples/bigint2/: Cargo.toml
examples/bls12_381/: Cargo.toml  README.md
examples/bn254/: Cargo.toml  README.md
examples/bogosort/: Cargo.toml  README.md
examples/browser-verify/: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
examples/c-guest/: .gitignore  Cargo.toml  Makefile  README.md
examples/c-kzg/: Cargo.toml  README.md
examples/chess/: Cargo.toml  README.md
examples/composition/: Cargo.toml  README.md
examples/cpp/: CMakeLists.txt  Makefile  hello.cpp
examples/cycle-counter/: Cargo.toml  README.md
examples/digital-signature/: Cargo.toml  README.md
examples/dotproduct/: Cargo.toml  README.md
examples/ecdsa/: Cargo.toml  README.md  ecdsa_verify.pprof
examples/evm/: Cargo.toml  README.md
examples/factors/: Cargo.toml  README.md
examples/groth16-verifier/: Cargo.toml  README.md
examples/hello-world/: Cargo.toml  README.md  tutorial.md
examples/hmac/: Cargo.toml
examples/json/: Cargo.toml  README.md
examples/jwt-validator/: Cargo.toml  README.md
examples/keccak/: Cargo.toml  README.md
examples/merkle/: .gitignore  Cargo.toml
examples/methods/: Cargo.toml
examples/multisig/: Cargo.toml  README.md
examples/password-checker/: Cargo.toml  README.md
examples/profiling/: Cargo.toml  README.md  ecdsa_verify.pprof
examples/prorata/: Cargo.toml  README.md  rust-toolchain
examples/prover/: Cargo.toml  README.md
examples/redis-executor/: Cargo.toml
examples/revm/: Cargo.toml  Contract.sol  README.md
examples/sha/: Cargo.toml  README.md
examples/smartcore-ml/: Cargo.toml  README.md  SmartCore.ipynb  iris_classes.csv  iris_input_data.csv
examples/util/: Cargo.toml
examples/voting-machine/: Cargo.toml  README.md
examples/waldo/: .gitignore  Cargo.toml  README.md
examples/wasm/: Cargo.toml  README.md
examples/wordle/: Cargo.toml  README.md
examples/xgboost/: Cargo.toml  README.md  spice-ai-template.ipynb
examples/zkevm-demo/: Cargo.toml  README.md
rzup/: --request  Cargo.toml  README.md  install  rzup  rzup-init.sh
rzup/src/: build.rs  cargo_risczero.rs  cli.rs  common.rs  components.rs  components.rs.orig  env.rs  error.rs  errors.rs  events.rs  extension.rs  help.rs  lib.rs  main.rs  paths.rs  r0vm.rs  registry.rs  repo.rs  rust-toolchain-build-config.toml  settings.rs  toolchain.rs  utils.rs
xtask/: Cargo.toml
xtask/src/: bazel.rs  bootstrap.rs  bootstrap_blake3_groth16.rs  bootstrap_fault.rs  bootstrap_groth16.rs  bootstrap_kernel_builds.rs  bootstrap_poseidon.rs  bootstrap_protos.rs  extract_elf.rs  gen_benchmark.rs  gen_receipt.rs  install.rs  main.rs  release_backwards_compat.rs  semver_checks.rs  setup_blake3_groth16.rs  setup_groth16.rs  update_crate_version.rs  update_lock_files.rs
(+6472 files in other folders)
