load("//bazel/rules/clang_format:defs.bzl", "clang_format_toolchain")

package(default_visibility = ["//visibility:public"])

exports_files([".clang-format"])

filegroup(
    name = "clang_tidy_config",
    data = [".clang-tidy"],
)

clang_format_toolchain(
    name = "clang_format_toolchain_impl",
    clang_format = "@py3_env//:py3_env/bin/clang-format",
)

toolchain(
    name = "clang_format_toolchain",
    toolchain = "clang_format_toolchain_impl",
    toolchain_type = "//bazel/rules/clang_format:toolchain_type",
)
