[workspace]
resolver = "2"
members = [
  "bonsai/sdk",
  "risc0/binfmt",
  "risc0/build",
  "risc0/build_kernel",
  "risc0/cargo-risczero",
  "risc0/circuit/recursion",
  "risc0/circuit/recursion-sys",
  "risc0/circuit/rv32im",
  "risc0/circuit/rv32im-sys",
  "risc0/core",
  "risc0/groth16",
  "risc0/r0vm",
  "risc0/sys",
  "risc0/tools",
  "risc0/zkp",
  "risc0/zkvm",
  "risc0/zkvm/methods",
  "risc0/zkvm/platform",
  "risc0/zkvm/receipts",
  "rzup",
  "tools/hotbench",
  "website/doc-test/main",
  "xtask",
]
exclude = ["tools/crates-validator"]

[workspace.package]
version = "1.1.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://risczero.com/"
repository = "https://github.com/risc0/risc0/"

[workspace.dependencies]
bonsai-sdk = { version = "0.9.0-alpha.1", default-features = false, path = "bonsai/sdk" }
hotbench = { path = "tools/hotbench" }
metal = "0.29"
risc0-binfmt = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/binfmt" }
risc0-build = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/build" }
risc0-build-kernel = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/build_kernel" }
risc0-circuit-recursion = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/circuit/recursion" }
risc0-circuit-recursion-sys = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/circuit/recursion-sys" }
risc0-circuit-rv32im = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/circuit/rv32im" }
risc0-circuit-rv32im-sys = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/circuit/rv32im-sys" }
risc0-core = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/core" }
risc0-groth16 = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/groth16" }
risc0-r0vm = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/r0vm" }
risc0-sys = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/sys" }
risc0-zkp = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/zkp" }
risc0-zkvm = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/zkvm" }
risc0-zkvm-platform = { version = "1.1.0-alpha.1", default-features = false, path = "risc0/zkvm/platform" }
sppark = "0.1.7"

[profile.bench]
lto = true

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.release]
lto = true
