[workspace]
resolver = "2"
members = [
  "bonsai/sdk",
  "risc0/bigint2",
  "risc0/bigint2/methods",
  "risc0/binfmt",
  "risc0/build",
  "risc0/build_kernel",
  "risc0/cargo-risczero",
  "risc0/circuit/keccak",
  "risc0/circuit/keccak-sys",
  "risc0/circuit/recursion",
  "risc0/circuit/recursion-sys",
  "risc0/circuit/rv32im",
  "risc0/circuit/rv32im-sys",
  "risc0/core",
  "risc0/groth16",
  "risc0/groth16-sys",
  "risc0/povw",
  "risc0/povw/guests",
  "risc0/r0vm",
  "risc0/sys",
  "risc0/tools",
  "risc0/zkos/v1compat",
  "risc0/zkp",
  "risc0/zkvm",
  "risc0/zkvm/compat",
  "risc0/zkvm/methods",
  "risc0/zkvm/platform",
  "risc0/zkvm/receipts",
  "rzup",
  "tools/hotbench",
  "website/doc-test/main",
  "xtask",
]
exclude = ["tools/crates-validator"]

[workspace.package]
version = "3.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://risczero.com/"
repository = "https://github.com/risc0/risc0/"

[workspace.dependencies]
bonsai-sdk = { version = "1.4.1", default-features = false, path = "bonsai/sdk" }
hotbench = { path = "tools/hotbench" }
metal = "0.29"
risc0-bigint2 = { version = "1.4.7", default-features = false, path = "risc0/bigint2" }
risc0-binfmt = { version = "3.0.0", default-features = false, path = "risc0/binfmt" }
risc0-build = { version = "3.0.0", default-features = false, path = "risc0/build" }
risc0-build-kernel = { version = "2.0.1", default-features = false, path = "risc0/build_kernel" }
risc0-circuit-keccak = { version = "4.0.0", default-features = false, path = "risc0/circuit/keccak" }
risc0-circuit-keccak-sys = { version = "4.0.0", default-features = false, path = "risc0/circuit/keccak-sys" }
risc0-circuit-recursion = { version = "4.0.0", default-features = false, path = "risc0/circuit/recursion" }
risc0-circuit-recursion-sys = { version = "4.0.0", default-features = false, path = "risc0/circuit/recursion-sys" }
risc0-circuit-rv32im = { version = "4.0.0", default-features = false, path = "risc0/circuit/rv32im" }
risc0-circuit-rv32im-sys = { version = "4.0.0", default-features = false, path = "risc0/circuit/rv32im-sys" }
risc0-core = { version = "2.0.1", default-features = false, path = "risc0/core" }
risc0-groth16 = { version = "3.0.0", default-features = false, path = "risc0/groth16" }
risc0-groth16-sys = { version = "0.1.0", default-features = false, path = "risc0/groth16-sys" }
risc0-povw = { default-features = false, path = "risc0/povw" }
risc0-r0vm = { version = "3.0.0", default-features = false, path = "risc0/r0vm" }
risc0-sys = { version = "1.5.0", default-features = false, path = "risc0/sys" }
risc0-zkos-v1compat = { version = "2.0.2", path = "risc0/zkos/v1compat" }
risc0-zkp = { version = "3.0.0", default-features = false, path = "risc0/zkp" }
risc0-zkvm = { version = "3.0.0", default-features = false, path = "risc0/zkvm" }
risc0-zkvm-platform = { version = "2.0.4", default-features = false, path = "risc0/zkvm/platform" }
rzup = { version = "0.5.0", default-features = false, path = "rzup" }
sppark = "0.1.12"

[profile.bench]
lto = true

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.release]
lto = true
