[workspace]
resolver = "2"
members = [
    "bonsai/sdk",
    "risc0/bigint2",
    "risc0/bigint2/methods",
    "risc0/binfmt",
    "risc0/build",
    "risc0/build_kernel",
    "risc0/cargo-risczero",
    "risc0/circuit/hello-m3",
    "risc0/circuit/keccak",
    "risc0/circuit/keccak-sys",
    "risc0/circuit/recursion",
    "risc0/circuit/recursion-povw-zkrs",
    "risc0/circuit/recursion-sys",
    "risc0/circuit/recursion-zkrs",
    "risc0/circuit/rv32im",
    "risc0/circuit/rv32im-sys",
    "risc0/core",
    "risc0/groth16",
    "risc0/groth16-sys",
    "risc0/povw",
    "risc0/povw/guests",
    "risc0/r0vm",
    "risc0/sys",
    "risc0/tools",
    "risc0/zkos/common",
    "risc0/zkos/v1compat",
    "risc0/zkp",
    "risc0/zkvm",
    "risc0/zkvm/methods",
    "risc0/zkvm/platform",
    "risc0/zkvm/receipts",
    "rzup",
    "tools/gpu-guard",
    "tools/gpu-guard/macros",
    "tools/hotbench",
    "vendor/sppark",
    "website/doc-test/main",
    "xtask",
]
exclude = ["tools/crates-validator"]

[workspace.package]
version = "5.0.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
homepage = "https://risczero.com/"
repository = "https://github.com/risc0/risc0/"

[workspace.dependencies]
bonsai-sdk = { version = "1.4.3", default-features = false, path = "bonsai/sdk" }
gpu-guard = { path = "tools/gpu-guard" }
hotbench = { path = "tools/hotbench" }
metal = "0.29"
risc0-bigint2 = { version = "1.4.12", default-features = false, path = "risc0/bigint2" }
risc0-bigint2-methods = { path = "risc0/bigint2/methods" }
risc0-binfmt = { version = "5.0.0", default-features = false, path = "risc0/binfmt" }
risc0-build = { version = "5.0.0", default-features = false, path = "risc0/build" }
risc0-build-kernel = { version = "5.0.0", default-features = false, path = "risc0/build_kernel" }
risc0-circuit-keccak = { version = "5.0.0", default-features = false, path = "risc0/circuit/keccak" }
risc0-circuit-keccak-sys = { version = "5.0.0", default-features = false, path = "risc0/circuit/keccak-sys" }
risc0-circuit-recursion = { version = "5.0.0", default-features = false, path = "risc0/circuit/recursion" }
risc0-circuit-recursion-povw-zkrs = { version = "5.0.0", default-features = false, path = "risc0/circuit/recursion-povw-zkrs" }
risc0-circuit-recursion-sys = { version = "5.0.0", default-features = false, path = "risc0/circuit/recursion-sys" }
risc0-circuit-recursion-zkrs = { version = "5.0.0", default-features = false, path = "risc0/circuit/recursion-zkrs" }
risc0-circuit-rv32im = { version = "5.0.0", default-features = false, path = "risc0/circuit/rv32im" }
risc0-circuit-rv32im-sys = { version = "5.0.0", default-features = false, path = "risc0/circuit/rv32im-sys" }
risc0-core = { version = "5.0.0", default-features = false, path = "risc0/core" }
risc0-groth16 = { version = "5.0.0", default-features = false, path = "risc0/groth16" }
risc0-groth16-sys = { version = "5.0.0", default-features = false, path = "risc0/groth16-sys" }
risc0-povw = { default-features = false, path = "risc0/povw" }
risc0-r0vm = { version = "5.0.0", default-features = false, path = "risc0/r0vm" }
risc0-sppark = { version = "5.0.0", path = "vendor/sppark" }
risc0-sys = { version = "5.0.0", default-features = false, path = "risc0/sys" }
risc0-zkos-common = { version = "5.0.0", default-features = false, path = "risc0/zkos/common" }
risc0-zkos-v1compat = { version = "5.0.0", path = "risc0/zkos/v1compat" }
risc0-zkp = { version = "5.0.0", default-features = false, path = "risc0/zkp" }
risc0-zkvm = { version = "5.0.0", default-features = false, path = "risc0/zkvm" }
risc0-zkvm-platform = { version = "5.0.0", default-features = false, path = "risc0/zkvm/platform" }
rzup = { version = "0.6.0", default-features = false, path = "rzup" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(ci)',
    'cfg(ci_profile, values("fast", "medium", "slow"))',
] }

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3
codegen-units = 256
debug = 1
lto = "off"
incremental = true

[profile.release]
lto = true

[profile.xtask]
inherits = "release"
lto = false
incremental = true
