[package]
name = "risc0-benchmark"
version = "0.17.0"
edition = "2021"

[workspace]
members = [
    "methods",
]

[workspace.dependencies]
risc0-benchmark-methods = { path = "methods" }
risc0-build = { path = "../risc0/build" }

[dependencies]
blake3 = "1.4"
blake2 = { version = "0.10.6", default-features = false }
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"
risc0-benchmark-methods = { workspace = true }
risc0-zkp = { path = "../risc0/zkp", default-features = false }
risc0-zkvm = { path = "../risc0/zkvm", default-features = false, features = ["prove"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"

[features]
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
