[package]
name = "risc0-benchmark"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["methods", "shared"]

[workspace.dependencies]
risc0-build = { path = "../risc0/build" }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.1"
ed25519-dalek = { version = "2.0.0-rc.3", default-features = false, features = [
    "rand_core",
] }
enum-iterator = "2.0"
gpu-guard = { path = "../tools/gpu-guard" }
human-repr = { version = "1.0", features = ["1024"] }
k256 = { version = "0.13", features = ["serde"] }
rand = "0.9.1"
rand_core = "0.6"
risc0-benchmark-lib = { path = "shared" }
risc0-benchmark-methods = { path = "methods" }
risc0-zkvm = { path = "../risc0/zkvm", features = ["prove"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.8"
tabled = "0.15"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
