[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/bento-client",
    "crates/sample-guest/common",
    "crates/sample-guest/methods",
    "crates/taskdb",
    "crates/workflow",
    "crates/workflow-common"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://risczero.com/"
repository = "https://github.com/risc0/bento/"

[workspace.dependencies]
anyhow = "1.0"
aws-sdk-s3 = "1.34" # used for minio for max compatibility
bento-client = { path = "crates/bento-client" }
bincode = "1.3"
bonsai-sdk = { path = "../bonsai/sdk", features = ["non_blocking"] }
bytemuck = "1.16"
clap = { version = "4.5", features = ["derive", "env"] }
deadpool-redis = "0.20"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
redis = { version = "0.31", features = ["tokio-comp"] }
risc0-build = { path = "../risc0/build" }
risc0-zkvm = { path = "../risc0/zkvm", default-features = false }
sample-guest-common = { path = "crates/sample-guest/common" }
sample-guest-methods = { path = "crates/sample-guest/methods" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false }
taskdb = { path = "crates/taskdb" }
tempfile = "3.10"
thiserror = "1.0"
tokio = "1.44"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4"] }
workflow = { path = "crates/workflow" }
workflow-common = { path = "crates/workflow-common" }

[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
