[workspace]
resolver = "2"
members = ["ethereum", "ethereum-relay", "rest-api-mock", "sdk"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
homepage = "https://risczero.com/"
repository = "https://github.com/risc0/risc0/"

[workspace.dependencies]
bonsai-ethereum-contracts = { version = "0.5.0", path = "ethereum" }
bonsai-ethereum-relay = { version = "0.5.0", default-features = false, path = "ethereum-relay" }
bonsai-rest-api-mock = { version = "0.5.0", default-features = false, path = "rest-api-mock" }
bonsai-sdk = { version = "0.5.0", default-features = false, path = "sdk" }
ethers = { version = "2.0",  default-features = false }
ethers-signers = { version = "2.0", default-features = false }
risc0-build = { version = "0.20.0-alpha.1", default-features = false, path = "../risc0/build" }
risc0-zkvm = { version = "0.20.0-alpha.1", default-features = false, path = "../risc0/zkvm" }

[patch.crates-io]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "8175f0f97070ad69abd5dfa7b8df31f1c1dcc3d6" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", rev = "8175f0f97070ad69abd5dfa7b8df31f1c1dcc3d6" }

[profile.bench]
lto = true

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
