load("@rules_python//python:defs.bzl", "py_binary")
load("//bazel/rules/doxygen:defs.bzl", "doxygen")

SRCS = [
    "//risc0/zkvm/sdk/cpp/guest:docs",
]

doxygen(
    name = "doxygen",
    srcs = SRCS,
    anchor = "//risc0:docs_anchor",
    doxyfile = "Doxyfile",
    target_compatible_with = select({
        "@bazel_tools//platforms:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    tool = select({
        "@bazel_tools//platforms:windows": "@py3_env//:py3_env/Library/bin/doxygen.exe",
        "//conditions:default": "@py3_env//:py3_env/bin/doxygen",
    }),
)

py_binary(
    name = "docs",
    srcs = ["docs.py"],
    data = SRCS + [
        "Doxyfile",
    ],
)
