[workspace]
resolver = "2"
members = [
  "bevy",
  "browser-verify",
  "chess",
  "chess/core",
  "digital-signature",
  "digital-signature/core",
  "ecdsa",
  "hello-world",
  "json",
  "json/core",
  "password-checker",
  "password-checker/core",
  "prorata",
  "prorata/core",
  "sha",
  "waldo",
  "waldo/core",
  "wasm",
  "wordle",
  "wordle/core",
  "zkevm-demo",
  "zkevm-demo/core",
]

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
