[workspace]
resolver = "2"
members = [
  "bevy",
  "bls12_381",
  "bn254",
  "browser-verify",
  "c-guest/host",
  "c-guest/platform",
  "c-kzg",
  "chess",
  "chess/core",
  "composition",
  "digital-signature",
  "digital-signature/core",
  "ecdsa/k256",
  "ecdsa/p256",
  "groth16-verifier",
  "hello-world",
  "json",
  "json/core",
  "jwt-validator",
  "jwt-validator/core",
  "keccak",
  "password-checker",
  "password-checker/core",
  "profiling",
  "prorata",
  "prorata/core",
  "prover",
  "sha",
  "smartcore-ml",
  "voting-machine",
  "voting-machine/core",
  "waldo",
  "waldo/core",
  "wasm",
  "wordle",
  "wordle/core",
  "xgboost",
]

[workspace.package]
edition = "2024"

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
