[package]
name = "rzup"
description = "The RISC Zero version management library and CLI"
version = "0.3.0-alpha.1"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.release]
release = false

[[bin]]
name = "rzup"
path = "src/bin/rzup.rs"

[features]
default = ["cli", "install"]
cli = ["dep:clap", "dep:indicatif", "dep:colored"]
install = ["dep:reqwest", "dep:tar", "dep:xz", "dep:flate2", "dep:fs2"]

[dependencies]
thiserror = "2.0.7"
tempfile = "3.14.0"
semver = "1.0.23"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
flate2 = { version = "1.0.35", optional = true }
fs2 = { version = "0.4.3", optional = true }
xz = { version = "0.1.0", optional = true }
tar = { version = "0.4.43", optional = true }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "blocking", "json"], optional = true }
strum = { version = "0.26.3", features = ["derive"] }
yaml-rust2 = "0.9.0"
clap = { version = "4.5.23", features = ["derive"], optional = true }
indicatif = { version = "0.17.9", optional = true }
colored = { version = "2.2.0", optional = true }

[dev-dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["server"] }
hyper-util = "0.1.10"
paste = "1.0.15"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
walkdir = "2.5.0"
