[package]
name = "rzup"
description = "The RISC Zero version management library and CLI"
version = "0.4.2"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "rzup"
path = "src/bin/rzup.rs"

[features]
default = ["cli", "install"]
cli = ["dep:clap", "dep:indicatif", "dep:colored", "dep:is-terminal"]
install = ["dep:reqwest", "dep:tar", "dep:xz", "dep:flate2", "dep:fs2"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"], optional = true }
colored = { version = "2.2.0", optional = true }
flate2 = { version = "1.0.35", optional = true }
fs2 = { version = "0.4.3", optional = true }
indicatif = { version = "0.17.9", optional = true }
is-terminal = { version = "0.4.15", optional = true }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "blocking", "json"], optional = true }
semver = "1.0.23"
serde = { version = "1.0.215", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
tar = { version = "0.4.43", optional = true }
tempfile = "3.14.0"
thiserror = "2.0.6"
toml = "0.8.19"
xz = { version = "0.1.0", optional = true }
yaml-rust2 = "0.9.0"

[dev-dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.5.1", features = ["server"] }
hyper-util = "0.1.10"
paste = "1.0.15"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
walkdir = "2.5.0"
