[package]
name = "rzup"
description = "The RISC Zero version management library and CLI"
version = "0.5.0"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "rzup"
path = "src/bin/rzup.rs"

[features]
default = ["cli", "install", "publish"]
cli = ["dep:clap", "dep:indicatif", "dep:colored", "dep:is-terminal"]
install = [
    "dep:flate2",
    "dep:fs2",
    "dep:http",
    "dep:liblzma",
    "dep:reqwest",
    "dep:tar",
]
publish = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sigv4",
    "dep:http",
    "dep:liblzma",
    "dep:reqwest",
    "dep:serde_json",
    "dep:tokio",
    "dep:walkdir",
    "dep:tar",
]

[dependencies]
aws-config = { version = "1.8", optional = true, features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2", optional = true }
aws-sigv4 = { version = "1.3", optional = true }
clap = { version = "4.5.23", features = ["derive"], optional = true }
colored = { version = "3.0.0", optional = true }
flate2 = { version = "1.0.35", optional = true }
fs2 = { version = "0.4.3", optional = true }
http = { version = "1", optional = true }
hex = "0.4"
indicatif = { version = "0.17.9", optional = true }
is-terminal = { version = "0.4.15", optional = true }
reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls",
  "blocking",
  "json",
], optional = true }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_with = "3"
sha2 = { version = "0.10", default-features = false }
strum = { version = "0.27.1", features = ["derive"] }
tar = { version = "0.4.43", optional = true }
tempfile = "3.14.0"
thiserror = "2.0.6"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"], optional = true }
toml = "0.8.19"
liblzma = { version = "0.4", optional = true, features = ["static", "parallel"] }
yaml-rust2 = "0.10.1"
walkdir = { version = "2.5.0", optional = true }

[dev-dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.5.1", features = ["server"] }
hyper-util = "0.1.10"
maplit = "1"
paste = "1.0.15"
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
walkdir = "2.5.0"
