[package]
name = "xtask"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
bincode = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
prost-build = "0.13"
protobuf-src = "1.1"
regex = "1"
risc0-circuit-recursion = { workspace = true, features = ["prove"], optional = true }
risc0-core = { workspace = true }
risc0-zkp = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, features = ["prove"], optional = true }
risc0-zkvm-methods = { path = "../risc0/zkvm/methods", optional = true }
tempfile = "3.3"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "6.0"
xshell = "0.2"

[package.metadata.release]
release = false

[features]
default = ["zkvm"]
zkvm = [
  "dep:risc0-circuit-recursion",
  "dep:risc0-zkp",
  "dep:risc0-zkvm",
  "dep:risc0-zkvm-methods",
]
