[package]
name = "xtask"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
anyhow = "1"
bincode = "1.3"
camino = "1.1.9"
cargo-semver-checks = "0.43.0"
cargo_metadata = "0.21.0"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
log = "0.4"
memmap2 = { version = "0.9", optional = true }
prost-build = "0.14.1"
protobuf-src = "1.1"
regex = "1"
risc0-binfmt = { workspace = true }
risc0-circuit-keccak = { workspace = true, features = [
  "prove",
], optional = true }
risc0-circuit-recursion = { workspace = true, features = [
  "prove",
], optional = true }
risc0-core = { workspace = true }
risc0-groth16-sys = { workspace = true, optional = true, features = [
  "setup",
] }
risc0-zkp = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, features = ["prove"], optional = true }
risc0-zkvm-methods = { path = "../risc0/zkvm/methods", optional = true }
rlimit = "0.10.2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
tempfile = "3.12"
toml = "0.9.2"
toml_edit = "0.23.1"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5.0"
which = "8.0.0"
xshell = "0.2"

[package.metadata.release]
release = false

[features]
default = ["zkvm"]
cuda = [
  "risc0-circuit-recursion/cuda",
  "risc0-groth16-sys/cuda",
  "risc0-zkp/cuda",
  "risc0-zkvm/cuda",
]
# Required for the setup-groth16 command.
setup-groth16 = ["dep:risc0-groth16-sys", "dep:memmap2", "cuda"]
zkvm = [
  "dep:risc0-circuit-keccak",
  "dep:risc0-circuit-recursion",
  "dep:risc0-zkp",
  "dep:risc0-zkvm",
  "dep:risc0-zkvm-methods",
]
