[package]
name = "risc0-examples-cycle-counter"
version = "0.18.0"
edition = "2021"

[dependencies]
bevy-methods = { path = "../../examples/bevy/methods" }
chess-core = { path = "../../examples/chess/core" }
chess-methods = { path = "../../examples/chess/methods" }
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
digital-signature-core = { path = "../../examples/digital-signature/core" }
digital-signature-methods = { path = "../../examples/digital-signature/methods" }
ecdsa-methods = { path = "../../examples/ecdsa/methods" }
env_logger = "0.10"
hello-world-methods = { path = "../../examples/hello-world/methods" }
image = "0.24"
json-methods = { path = "../../examples/json/methods" }
k256 = { version = "0.13", features = ["serde"] }
log = "0.4"
password-checker-core = { path = "../../examples/password-checker/core" }
password-checker-methods = { path = "../../examples/password-checker/methods" }
prorata-core = { path = "../../examples/prorata/core" }
prorata-methods = { path = "../../examples/prorata/methods" }
rand = "0.8"
rand_core = "0.6.4"
risc0-zkvm = { path = "../../risc0/zkvm", default-features = false, features = ["prove"] }
rmp-serde = "1.1"
rust_decimal = { version = "1.29", features = ["serde-str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-methods = { path = "../../examples/sha/methods" }
sha2 = "0.10"
smartcore = { version = "0.3", features = ['serde'] }
smartcore-ml-methods = { path = "../../examples/smartcore-ml/methods" }
waldo-core = { path = "../../examples/waldo/core" }
waldo-methods = { path = "../../examples/waldo/methods" }
wasm-methods = { path = "../../examples/wasm/methods" }
wat = "1.0"
wordle-methods = { path = "../../examples/wordle/methods" }

[features]
cuda = []
metal = []
